# Mksa-Alpha

./: .gitignore  AGENTS.md  CLAUDE.md  scan2.js
agent/: build.sh
agent/src/dev/mksa/agent/: Agent.java  Boot.java  DependencyGraph.java  GroupToggleService.java  HotToggleAdapter.java  InProcess.java  Ledger.java  MetricsSampler.java  ModIconStore.java  ModSemantics.java  Tier.java  Tier3AdapterRegistry.java  Tier3ChatHeadsHistoryRewrite.java  Tier3ControlledDemix.java  Tier3ControlledDemixTarget.java  Tier3DemixApply.java  Tier3FieldScanSmoke.java  Tier3InstanceLocator.java  Tier3LiveCapture.java  Tier3MixinAudit.java  Tier3MixinReplay.java  Tier3MixinReplaySmoke.java  Tier3OfflineTransformCheck.java  Tier3RealTargetBaseResetSmoke.java  Tier3RealTargetContentRedefineSmoke.java  Tier3RealTargetRedefineSmoke.java  Tier3RedefSmoke.java  Tier3RedefSmokeTarget.java  Tier3RetransformCaptureSmoke.java  Tier3RuntimeState.java  (+7 more)
docs/: log.txt  modelo-de-datos.md  protocolo-ipc.md  proyecto.md  resumen-proyecto.md  session-handoff.md
launcher/: index.html  package-lock.json  package.json  vite.config.js
launcher/src/: App.svelte  app.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: instances.rs  ipc.rs  jvm.rs  launch.rs  lib.rs  main.rs  meta.rs
mod-thin/: build.sh  modthin.sources
mod-thin/src/main/resources/: fabric.mod.json
mod-thin/tmp-build/: rebuild.ps1
mod-thin/tools/: ConvertImage.java
scripts/: check_env.py  generate_icons.py  process_ai_icons.py  process_specific_icons.py
(+13 files in other folders)
