[package]
name = "mksa-launcher"
version = "0.1.0"
description = "MKSA Launcher"
authors = ["Aly"]
edition = "2021"
default-run = "mksa-launcher"

[lib]
name = "mksa_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# "test" expone tauri::test::mock_app para el harness de verificación (bin verify-fase1).
tauri = { version = "2", features = ["test"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
sha1_smol = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
rand = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
